--- a/TestKIFApplication/TestKIFApplication/Base.lproj/Main.storyboard
+++ b/TestKIFApplication/TestKIFApplication/Base.lproj/Main.storyboard
@@ -36,8 +36,9 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0Y-wO-iUK">
                                 <rect key="frame" x="178" y="112" width="122" height="21"/>
                                 <animations/>
+                                <accessibility key="accessibilityConfiguration" label="ShowLabel"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
